--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,12 @@
 .modal.product{
     width: 32%;
 }
+#loginbg{
+    background-image: url('../img/loginbg.jpeg');
+}
+.py-4.login{
+    padding-top: 15.5rem !important;
+}
+th.actions{
+    width: 15%;
+}
